objects/ASI_CRM_Customer_Directory__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Chain_Type__c</fullName>
        <label>Chain Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MOT</fullName>
                </value>
                <value>
                    <fullName>TOT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Chain__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Chain</label>
        <referenceTo>ASI_CRM_Customer_Directory__c</referenceTo>
        <relationshipLabel>Customer Directory (Customer Chain)</relationshipLabel>
        <relationshipName>Customer_Directory2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Company</label>
        <referenceTo>ASI_CRM_Customer_Directory__c</referenceTo>
        <relationshipLabel>Customer Directory (Customer Company)</relationshipLabel>
        <relationshipName>Customer_Directory1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Group</label>
        <referenceTo>ASI_CRM_Customer_Directory__c</referenceTo>
        <relationshipLabel>Customer Directory</relationshipLabel>
        <relationshipName>Customer_Directory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Customer Directory</relationshipLabel>
        <relationshipName>Customer_Directory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GCCC_Channel__c</fullName>
        <label>GCCC Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Secondary WS</fullName>
                </value>
                <value>
                    <fullName>Bar Supplier</fullName>
                </value>
                <value>
                    <fullName>TOT</fullName>
                </value>
                <value>
                    <fullName>MOT</fullName>
                </value>
                <value>
                    <fullName>GMS/SM</fullName>
                </value>
                <value>
                    <fullName>DS</fullName>
                </value>
                <value>
                    <fullName>CVS</fullName>
                </value>
                <value>
                    <fullName>HC/DGS</fullName>
                </value>
                <value>
                    <fullName>DPS</fullName>
                </value>
                <value>
                    <fullName>GLS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_GCCC_Outlet_Type__c</fullName>
        <label>GCCC Outlet Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NULL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_L1_Group_Code__c</fullName>
        <formula>IF(ISBLANK( ASI_CRM_Customer_Chain__c ), ASI_CRM_Customer_Code__c, IF( ISBLANK(ASI_CRM_Customer_Chain__r.ASI_CRM_Customer_Company__c) , ASI_CRM_Customer_Code__c,  IF( ISBLANK(ASI_CRM_Customer_Chain__r.ASI_CRM_Customer_Company__r.ASI_CRM_Customer_Group__c) , ASI_CRM_Customer_Code__c,  ASI_CRM_Customer_Chain__r.ASI_CRM_Customer_Company__r.ASI_CRM_Customer_Group__r.ASI_CRM_Customer_Code__c )  ) )</formula>
        <label>Group Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_L2_Company_Code__c</fullName>
        <formula>IF(ISBLANK( ASI_CRM_Customer_Chain__c ), ASI_CRM_Customer_Code__c,  IF( ISBLANK(ASI_CRM_Customer_Chain__r.ASI_CRM_Customer_Company__c) , ASI_CRM_Customer_Code__c,  ASI_CRM_Customer_Chain__r.ASI_CRM_Customer_Company__r.ASI_CRM_Customer_Code__c )  )</formula>
        <label>Company Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_L3_Chain_Code__c</fullName>
        <formula>IF(ISBLANK( ASI_CRM_Customer_Chain__c ), ASI_CRM_Customer_Code__c,  ASI_CRM_Customer_Chain__r.ASI_CRM_Customer_Code__c )</formula>
        <label>Chain Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Record_Type__c</fullName>
        <label>Customer Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Customer Directory</label>
    <listViews>
        <fullName>ASI_CRM_JP_All_Chain</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_Customer_Code__c</columns>
        <columns>ASI_CRM_GCCC_Channel__c</columns>
        <columns>ASI_CRM_GCCC_Outlet_Type__c</columns>
        <columns>ASI_CRM_Record_Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Customer_Directory__c.ASI_CRM_JP_Chain_Customer</value>
        </filters>
        <label>CRM JP Chain</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_JP_All_Company</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_Customer_Code__c</columns>
        <columns>ASI_CRM_GCCC_Channel__c</columns>
        <columns>ASI_CRM_GCCC_Outlet_Type__c</columns>
        <columns>ASI_CRM_Record_Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Customer_Directory__c.ASI_CRM_JP_Company_Customer</value>
        </filters>
        <label>CRM JP Company</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_JP_All_Customer</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_Customer_Code__c</columns>
        <columns>ASI_CRM_GCCC_Channel__c</columns>
        <columns>ASI_CRM_GCCC_Outlet_Type__c</columns>
        <columns>ASI_CRM_Record_Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Customer_Directory__c.ASI_CRM_JP_Customer</value>
        </filters>
        <label>CRM JP Customer</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_JP_All_Groups</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_Customer_Code__c</columns>
        <columns>ASI_CRM_GCCC_Channel__c</columns>
        <columns>ASI_CRM_GCCC_Outlet_Type__c</columns>
        <columns>ASI_CRM_Record_Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Customer_Directory__c.ASI_CRM_JP_Group_Customer</value>
        </filters>
        <label>CRM JP Groups</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_All_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Directory</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_JP_Chain_Customer</fullName>
        <active>true</active>
        <label>JP Customer Chain</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Company_Customer</fullName>
        <active>true</active>
        <label>JP Customer Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Customer</fullName>
        <active>true</active>
        <label>JP Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Group_Customer</fullName>
        <active>true</active>
        <label>JP Customer Group</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>